# project2A

./: .gitignore  CMakeLists.txt  README.md
Game/: CMakeLists.txt
Game/src/: main.cpp
Game/src/entities/: player.h
project2A/: CMakeLists.txt
project2A/assets/Localisation/: en.json
project2A/include/: Engine.h
project2A/include/Localisation/: LocalisationManager.h
project2A/src/: Engine.cpp
project2A/src/Engine/Audio/: AudioSystem.cpp
project2A/src/Engine/Graphics/: Renderer.cpp
project2A/src/Engine/Input/: InputManager.cpp
project2A/src/Engine/Localisation/: LocalisationManager.cpp
